  * Claus Hindsgaul
    - Updated Danish translation.
  * Alwin Meschede
    - Updated German translation (de.po)
  * Kęstutis Biliūnas
    - Updated Lithuanian translation (lt.po).
  * Ming Hua
    - Updated Simplified Chinese translation (zh_CN.po)
  * Andre Dahlqvist
    - Update Swedish translation (sv.po)
  * Safir Secerovic
    - Update Bosnian translation (bs.po).

 -- Bart Cornelis <cobaco@linux.be>  Thu,  8 Jan 2004 13:47:12 +0100

netcfg (0.41) unstable; urgency=low

  * Change priority of the hostname question to high.

 -- Joey Hess <joeyh@debian.org>  Thu,  1 Jan 2004 22:21:28 -0500

netcfg (0.40) unstable; urgency=low

  * Ming Hua
    - Initial Simplified Chinese translation (zh_CN.po)
  * Bart Cornelis
    - Merged Norwegian Nynorsk (nn.po) translation from skolelinux-cvs
  * Thiemo Seufer
    - Code cleanup and whitespace police, run through the testmill
      this time.
  * Andre Dahlqvist
    - Initial Swedish translation (sv.po).
  * Matt Kraai
    - Do not overwrite /etc/resolv.conf if using DHCP.
    - Do not set the domain if it is the empty string.
  * Joey Hess
    - Only copy /etc/resolv.conf to /target in static config.
    - Do not write badly formatted /etc/mailname. Instead, set the hostname
      in /proc and let the MTA postinst do the rest.
      Closes: #212143, #222631
    - If the domain is left blank, do not add a search line to
      /etc/resolv.conf
    - Write hostname to /etc/hostname and copy to target in prebaseconfig,
      to avoid the localhost effect from 50config-target-network in
      prebaseconfig. Closes: #224644

 -- Joey Hess <joeyh@debian.org>  Tue, 30 Dec 2003 19:54:27 -0500

netcfg (0.39) unstable; urgency=high

   * Reverted Thiemo Seufer's "code cleanup", which broke the state machine
     and made netcfg hang after getting a dhcp lease. Test before committing,
     people!

 -- Joey Hess <joeyh@debian.org>  Fri, 26 Dec 2003 13:35:58 -0500

netcfg (0.38) unstable; urgency=low

  * Peter Mann